<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aerial Assist Scouting</string>
    <string name="action_settings">Settings</string>
    <string name="event">Regional/Division</string>
    <string name="team_number">Team Number</string>
    <string name="team_number_hint">2502</string>
    <string name="match_number">Match Number</string>
    <string name="match_number_hint">0</string>
    <string name="gametype">Game Type</string>
    <string name="autonomous">Autonomous</string>
    <string name="teleop">Teleop</string>
    <string name="finalize">Finalize</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="moved">Moved</string>
    <string name="auto_scored_hot">Scored Hot</string>
    <string name="auto_scored_low">Scored Low</string>
    <string name="auto_scored_high">Scored High</string>
    <string name="scored_hot">Scored Hot</string>
    <string name="scored_low">Scored Low</string>
    <string name="scored_high">Scored High</string>
    <string name="from_ground">Picked Off Ground</string>
    <string name="assists_initiated">Assists Initiated</string>
    <string name="assists_acquired">Assists Acquired</string>
    <string name="second_assists_initiated">2nd Assists Initiated</string>
    <string name="second_assists_acquired">2nd Assists Acquired</string>
    <string name="thrown_over_truss">Thrown Over Truss</string>
    <string name="caught_over_truss">Caught Over Truss</string>
    <string name="add">+</string>
    <string name="goalie">Goalie</string>
    <string name="passer">Passer</string>
    <string name="catcher">Catcher</string>
    <string name="launcher">Launcher</string>
    <string name="defense">Defense</string>
    <string name="broken">Broken</string>
    <string name="notes">Notes</string>
    <string name="strategy_label">Strategy</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="rating">Rating</string>
    <string name="default_counter_value">0</string>
    <string name="empty"></string>
    <string name="regional_selector">Regional:</string>
    <string name="regional_header">Regional</string>
    <string name="select_team">Team</string>
    <string name="regional_autonomous_average">Autonomous Average</string>
    <string name="regional_autonomous_rank">Autonomous Rank</string>
    <string name="regional_teleoperated_average">Teleoperated Average</string>
    <string name="regional_teleoperated_rank">Teleoperated Rank</string>
    <string name="worldwide_header">Worldwide</string>
    <string name="worldwide_autonomous_average">Autonomous Average</string>
    <string name="worldwide_autonomous_rank">Autonomous Rank</string>
    <string name="worldwide_teleoperated_average">Teleoperated Average</string>
    <string name="worldwide_teleoperated_rank">Teleoperated Rank</string>
    <string name="team_stats_strategy_goal">Goalie</string>
    <string name="team_stats_strategy_passer">Passer</string>
    <string name="team_stats_strategy_catcher">Receiver</string>
    <string name="team_stats_strategy_launcher">Truss</string>
    <string name="team_stats_strategy_defense">Defense</string>
    <string name="team_stats_strategy_broken">Broken</string>
    <string name="previous_matches_header">Previous Matches</string>
    <string name="menu_get_team_stats">Get Team Stats</string>
    <string name="menu_get_team_ranking">Get Rankings</string>
    <string name="menu_get_match_prediction">Match Predictions</string>
    <string name="error_bad_fields">Error: Not All Fields Filled Correctly</string>
    <string-array name="gamemodes_array">
        <item>Practice</item>
        <item>Qualification</item>
        <item>Elimination</item>
    </string-array>
    <string-array name="competitions">
        <item value="-1">Competition</item>
        <item>World Championships - Archimedes</item>
        <item>World Championships - Curie</item>
        <item>World Championships - Galileo</item>
        <item>World Championships - Newton</item>
    </string-array>
    
    <!-- Match Prediction -->
    <string name="red_predict_header">Red</string>
    <string name="blue_predict_header">Blue</string>
    <string name="red_1">Red 1</string>
    <string name="red_2">Red 2</string>
    <string name="red_3">Red 3</string>
    <string name="blue_1">Blue 1</string>
    <string name="blue_2">Blue 2</string>
    <string name="blue_3">Blue 3</string>
    <string name="red_1_points">Red 1 Points</string>
    <string name="red_2_points">Red 2 Points</string>
    <string name="red_3_points">Red 3 Points</string>
    <string name="red_total_points">Total Red Points</string>
    <string name="blue_1_points">Blue 1 Points</string>
    <string name="blue_2_points">Blue 2 Points</string>
    <string name="blue_3_points">Blue 3 Points</string>
    <string name="blue_total_points">Total Blue Points</string>
    <string name="predict">Predict</string>
    <string name="reset_teams">Reset</string>
    
</resources>
