<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" /> -->
    
    <item
        android:id="@+id/get_team_stats"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_get_team_stats" />
    
    <item
        android:id="@+id/get_team_ranking"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_get_team_ranking" />
    
     <item
        android:id="@+id/get_match_prediction"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_get_match_prediction" />

</menu>
