<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3dip"
    android:paddingRight="3dip"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >
        <EditText
            android:id="@+id/predict_red_1_team"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/red_1"
            android:nextFocusDown="@+id/predict_red_2_team"
            android:nextFocusUp="@+id/predict_red_2_team" />
        <EditText
            android:id="@+id/predict_red_2_team"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/red_2"
            android:nextFocusDown="@+id/predict_red_3_team"
            android:nextFocusUp="@+id/predict_red_3_team" />
        <EditText
            android:id="@+id/predict_red_3_team"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/red_3"
            android:nextFocusDown="@+id/predict_blue_1_team"
            android:nextFocusUp="@+id/predict_blue_1_team" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >
        <EditText
            android:id="@+id/predict_blue_1_team"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/blue_1"
            android:nextFocusDown="@+id/predict_blue_2_team"
            android:nextFocusUp="@+id/predict_blue_2_team" />
        <EditText
            android:id="@+id/predict_blue_2_team"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/blue_2"
            android:nextFocusDown="@+id/predict_blue_3_team"
            android:nextFocusUp="@+id/predict_blue_3_team" />
        <EditText
            android:id="@+id/predict_blue_3_team"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/blue_3" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="right" >
        <Button
            android:id="@+id/reset_teams"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:text="@string/reset_teams"
            style="?android:attr/buttonStyleSmall" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center_horizontal" >
        <TextView 
            android:id="@+id/predict_red_header"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="1"
            android:text="@string/red_predict_header"
            android:gravity="center_horizontal|center_vertical" />
        <TextView 
            android:id="@+id/predict_blue_header"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="1"
            android:text="@string/blue_predict_header"
            android:gravity="center_horizontal|center_vertical" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8"
        android:gravity="center_horizontal" >
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:paddingLeft="3dip"
            android:paddingRight="3dip"
            android:layout_weight="3"
            android:text="@string/red_1_points"
            android:gravity="left|center_vertical" />
        <TextView 
            android:id="@+id/match_predict_red_1_points" 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:paddingLeft="3dip"
            android:paddingRight="3dip"
            android:layout_weight="1"
            android:text="@string/empty"
            android:gravity="right|center_vertical" />
        <TextView 
            android:id="@+id/match_predict_blue_1_points" 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:paddingLeft="3dip"
            android:paddingRight="3dip"
            android:layout_weight="1"
            android:text="@string/empty"
            android:gravity="left|center_vertical" />
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:paddingLeft="3dip"
            android:paddingRight="3dip"
            android:layout_weight="3"
            android:text="@string/blue_1_points"
            android:gravity="right|center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8"
        android:gravity="center_horizontal" >
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="3"
            android:text="@string/red_2_points"
            android:gravity="left|center_vertical" />
        <TextView 
            android:id="@+id/match_predict_red_2_points" 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="1"
            android:text="@string/empty"
            android:gravity="right|center_vertical" />
        <TextView 
            android:id="@+id/match_predict_blue_2_points" 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="1"
            android:text="@string/empty"
            android:gravity="left|center_vertical" />
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="3"
            android:text="@string/blue_2_points"
            android:gravity="right|center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8"
        android:gravity="center_horizontal" >
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="3"
            android:text="@string/red_3_points"
            android:gravity="left|center_vertical" />
        <TextView 
            android:id="@+id/match_predict_red_3_points" 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="1"
            android:text="@string/empty"
            android:gravity="right|center_vertical" />
        <TextView 
            android:id="@+id/match_predict_blue_3_points" 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="1"
            android:text="@string/empty"
            android:gravity="left|center_vertical" />
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="3"
            android:text="@string/blue_3_points"
            android:gravity="right|center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8"
        android:gravity="center_horizontal" >
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="3"
            android:text="@string/red_total_points"
            android:gravity="left|center_vertical" />
        <TextView 
            android:id="@+id/match_predict_red_total_points" 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="1"
            android:text="@string/empty"
            android:gravity="right|center_vertical" />
        <TextView 
            android:id="@+id/match_predict_blue_total_points" 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="1"
            android:text="@string/empty"
            android:gravity="left|center_vertical" />
        <TextView 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="3"
            android:text="@string/blue_total_points"
            android:gravity="right|center_vertical" />
    </LinearLayout>
    
</LinearLayout>
